feature-templates/nCino/dataset/01xFqA04-Screen1/.store/metadata/objects/nFORCE__Widget__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__Data__c</fullName>
        <description>This field is optional. It is manually populated. It contains JSON formatter parameters for the widget.</description>
        <label>Data</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nFORCE__Icon__c</fullName>
        <description>This field is currently not being used</description>
        <label>Icon</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Angular__c</fullName>
        <description>This field is optional. This field is populated automatically by a formula based on the selection in nFORCE__Type__c. This type of widget displays angular.</description>
        <formula>IF(ISPICKVAL(nFORCE__Type__c, &apos;Angular&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Angular</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Knockout__c</fullName>
        <description>This field is optional. This field is populated automatically by a formula based on the selection in nFORCE__Type__c. This type of widget displays knockout, such as the CKE Editor used by the Credit Memo narrative sections.</description>
        <formula>IF(ISPICKVAL(nFORCE__Type__c, &apos;Knockout&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Knockout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Narrative__c</fullName>
        <description>This field is optional. This field is populated automatically by a formula based on the selection in nFORCE__Type__c. This type of widget displays the deprecated Live Editor.</description>
        <formula>IF(ISPICKVAL(nFORCE__Type__c, &apos;Narrative&apos;) || (ISPICKVAL(nFORCE__Type__c, &apos;Knockout&apos;) &amp;&amp; CONTAINS( Name, &apos;Narrative&apos;)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Narrative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parameters__c</fullName>
        <description>This field is optional. The value should include JSON parameters to configure vendor-specific widgets. {htmlGenerator: nCinoAwesomeHtmlKnockoutGenerator}</description>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Eight__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Eight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Eleven__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Eleven</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Fifteen__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Fifteen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Five__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Five</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Four__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Four</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Fourteen__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Fourteen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Nine__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Nine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_One__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Seven__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Seven</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Six__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Six</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Ten__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Ten</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Thirteen__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Thirteen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Three__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Twelve__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Twelve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Script_Resource_Two__c</fullName>
        <description>This field is optional. Any value added will reference a static javascript resource used to load the widget.</description>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Stylesheet_Resource_Eight__c</fullName>
        <description>This field is optional. Any value added will reference a cascading style sheet (CSS) resource used to load the widget.</description>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Eight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Stylesheet_Resource_Five__c</fullName>
        <description>This field is optional. Any value added will reference a cascading style sheet (CSS) resource used to load the widget.</description>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Five</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Stylesheet_Resource_Four__c</fullName>
        <description>This field is optional. Any value added will reference a cascading style sheet (CSS) resource used to load the widget.</description>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Four</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Stylesheet_Resource_Nine__c</fullName>
        <description>This field is optional. Any value added will reference a cascading style sheet (CSS) resource used to load the widget.</description>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Nine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Stylesheet_Resource_One__c</fullName>
        <description>This field is optional. Any value added will reference a cascading style sheet (CSS) resource used to load the widget.</description>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Stylesheet_Resource_Seven__c</fullName>
        <description>This field is optional. Any value added will reference a cascading style sheet (CSS) resource used to load the widget.</description>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Seven</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Stylesheet_Resource_Six__c</fullName>
        <description>This field is optional. Any value added will reference a cascading style sheet (CSS) resource used to load the widget.</description>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Six</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Stylesheet_Resource_Ten__c</fullName>
        <description>This field is optional. Any value added will reference a cascading style sheet (CSS) resource used to load the widget.</description>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Ten</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Stylesheet_Resource_Three__c</fullName>
        <description>This field is optional. Any value added will reference a cascading style sheet (CSS) resource used to load the widget.</description>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Stylesheet_Resource_Two__c</fullName>
        <description>This field is optional. Any value added will reference a cascading style sheet (CSS) resource used to load the widget.</description>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Type__c</fullName>
        <description>This field is required. It is manually populated. It determines what logic should be used when loading the widget. The values are Narrative (no longer used), Knockout, and Angular.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Narrative</fullName>
                </value>
                <value>
                    <fullName>Knockout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__View__c</fullName>
        <description>This field is optional. It is manually populated. This field is used to specify HTML markup to use when loading and displaying the widget.</description>
        <label>View</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Widget</label>
    <nameField>
        <label>Widget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>